--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Regular';
+  src: local('Poppins-Regular'),
+    url('./assets/fonts/Poppins/Poppins-Regular.ttf');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Bold';
+  src: local('Poppins-Bold'), url('./assets/fonts/Poppins/Poppins-Bold.ttf');
+  font-weight: 700;
+}
+
 @layer base {
   :root {
     --radius: 0.5rem;
